# my-demo

./: .gitignore  .gitmodules  README.md
docker/: cmd.md
docker/mygit/: Dockerfile
docker/mynginx/: Dockerfile
docker/wp-example/: docker-compose.yml
ffmpegdemo/: CMakeLists.txt
ffmpegdemo/include/: common.h  main.h
ffmpegdemo/src/: main.cpp  test_audio_resample.cpp  test_video_rescale.cpp
go-demo/gin-demo/: .gitignore  go.mod
go-demo/gin-demo/app/hello/: handler.go  router.go
go-demo/hellodemo/: go.mod  main.go  test.txt
go-demo/hellodemo/filedemo/: demo.go
go-demo/hellodemo/flagdemo/: demo.go
go-demo/hellodemo/helloworld/: fmt.go  helloworld.go
go-demo/hellodemo/logdemo/: demo.go
go-demo/hellodemo/nethttpdemo/: demo.go
go-demo/hellodemo/timedemo/: demo.go
go-demo/hellodemo/unittestdemo/: func1.go  func1_test.go
html/: .gitignore  index.html
javascript/: README.md  demo.js
py3/: multilineinput.py  my_unittest.py  onelineinput.py  urllib_demo.py
redis-in-action/01/: article.py
vue/demo/: demo.html
